removing static string constant library